コメント、フォロー、いいね

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,7 @@
 
  <body class="d-flex flex-column vh-100">
    <%= render 'layouts/header'%>
+   <%= render 'public/searches/search'%>
     <main class="mb-auto">
     <%= yield %>
     </main>
