--- a/app/views/public/customers/show.html.erb
+++ b/app/views/public/customers/show.html.erb
@@ -1,15 +1,17 @@
 <div>
   <h3><%= @customer.name %></h3>
   <%= image_tag @customer.get_profile_image(80,80) %>
+  <%= render 'public/relationships/follow',customer: @customer %>
 </div>
 
 <!-- ユーザーの投稿一覧 -->
-
 <% @movies.each do |movie| %>
 <div>
   <%= link_to public_movie_path(movie.id) do %>
     <video src="<%= movie %>" type="video/mp4" controls></video>
   <% end %>
 　<p>content：<%= movie.content %></p>
+　<p><%= movie.created_at %></p>
+　<p><%= link_to "#{movie.comments.count} コメント", public_movie_path(movie.id) %></p>
 </div>
 <% end %>
