--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,14 +1,21 @@
  <header class="shadow-sm">
       <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container">
-          <a class="navbar-brand p-3" href="/"><%= image_tag('logo.png',skip_pipeline: true) %></a>
+          <a class="navbar-brand p-3" href="/"></a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
                         aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav ml-auto">
-            <% if customer_signed_in? %>
+            <% if admin_signed_in? %>
+            <li class="nav-item">
+              <%= link_to "会員一覧",admin_customers_path,class: 'nav-link text-dark' %>
+            </li>
+            <li class="nav-item">
+              <%= link_to "ログアウト", destroy_admin_session_path, method: :delete, class: 'nav-link text-dark' %>
+            </li>
+            <% elsif customer_signed_in? %>
             <li class="nav-item">
               <%= link_to "マイページ",public_customer_path(current_customer.id),class: 'nav-link text-dark' %>
             </li>
@@ -31,6 +38,9 @@
             </li>
             <li class="nav-item">
               <%= link_to "ログイン", new_customer_session_path, class: 'nav-link text-dark' %>
+            </li>
+            <li class="nav-item">
+              <%= link_to "管理者ログイン", new_admin_session_path, class: 'nav-link text-dark' %>
             </li>
             <% end %>
             </ul>
