--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,7 @@
  <body class="d-flex flex-column vh-100">
    <%= render 'layouts/header'%>
    <%= render 'public/searches/search'%>
+   <%= render 'admin/searches/search' %>
     <main class="mb-auto">
     <%= yield %>
     </main>
