--- a/app/views/public/customers/index.html.erb
+++ b/app/views/public/customers/index.html.erb
@@ -1,22 +1,10 @@
-<h1>ユーザー一覧</h1>
-<table>
-  <thead>
-    <tr>
-      <th></th>
-      <th>name</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @customers.each do |customer| %>
-      <tr>
-        <td><%= image_tag customer.get_profile_image(80,80)  %></td>
-        <td><%= link_to public_customer_path(customer.id) do%>
+<div class="card-list-containar py-5">
+   <% @customers.each do |customer| %>
+        <div class="col-2">
+          <%= image_tag customer.get_profile_image(80,80), class:"mt-3 rounded-circle";  %>
+        </div>
+          <p class="card-text">name：<%= link_to public_customer_path(customer.id) do%>
               <%= customer.name %>
               <% end %>
-        </td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+    <% end %>      
+</div>
