--- a/app/views/public/movies/new.html.erb
+++ b/app/views/public/movies/new.html.erb
@@ -1,9 +1,22 @@
-<%= render 'errors', movie: @movie %>
-<h1>新規投稿</h1>
-  <%= form_with model: @movie, url:public_movies_path do |f| %>
-    <h4>動画</h4>
-      <%= f.file_field :movie %>
-    <h4>説明</h4>
-      <%= f.text_area :content %>
-    <%= f.submit '投稿' %>
-  <% end %>
+
+  <div class="containar">
+  <div class="row no-gutters">
+    <div class="col-md-5 col-sm-10 mx-2 mx-sm-auto shadow-lg rounded px-0 my-5">
+      <h5 class="text-dark bg-light p-4 mb-0">新規投稿</h5>
+      <div class="form-body p-4">
+        <%= render 'errors', movie: @movie %>
+         <%= form_with model: @movie, url:public_movies_path do |f| %>
+          <div class="input-group mb-3 mt-4">
+            <div class="input-group-prepend">
+              <span class="input-group-text" aria-hidden="true"><i class="fas fa-building"></i></span>
+            </div>
+            <%= f.file_field :movie, class:"form-control", placeholder:"動画" %>
+          </div>
+          <%= f.text_area :content, class:"form-control", rows:"3", placeholder:"コメントここに" %>
+          <hr>
+          <%= f.submit '投稿', class:"btn btn-lg btn-block btn-info mt-4" %>
+        <% end %>
+      </div>
+    </div>
+  </div>
+</div>
