--- a/app/views/public/movies/_favorites.html.erb
+++ b/app/views/public/movies/_favorites.html.erb
@@ -1,13 +1,13 @@
 <% if movie.favorited_by?(current_customer) %>
-    <p>
-      <%= link_to public_movie_favorites_path(movie), method: :delete do %>
-        ♥<%= movie.favorites.count %> いいね
+  <span>
+    <%= link_to public_movie_favorites_path(movie),class:"text-dark", method: :delete do %>
+        <i class="fa fa-heart" aria-hidden="true"></i><%= movie.favorites.count %>
       <% end %>
-    </p>
+  </span>
     <% else %>
-    <p>
-      <%= link_to public_movie_favorites_path(movie), method: :post do %>
-        ♡<%= movie.favorites.count %> いいね
+  <span>
+      <%= link_to public_movie_favorites_path(movie),class:"text-dark", method: :post do %>
+        <i class="fa fa-heart" aria-hidden="true"></i><%= movie.favorites.count %>
       <% end %>
-    </p>
+  </span>
   <% end %>
