--- a/app/views/public/movies/show.html.erb
+++ b/app/views/public/movies/show.html.erb
@@ -1,35 +1,47 @@
-<div>
-  <p><%= image_tag @movie.customer.get_profile_image(80,80)  %></p>
-  <p><%= link_to public_customer_path(@customer.id) do%>
-     <%= @movie.customer.name%>
-     <% end %>
-  </p>
-  
-  <video src="<%= rails_blob_path(@movie.movie) %>" type="video/mp4" controls></video>
-  <p>content：<%= @movie.content %></p>
-  <p>投稿日：<%= @movie.created_at.strftime('%Y/%m/%d') %></p>
-  <%= link_to "一覧", public_movies_path %>
-   <% if @movie.customer == current_customer %>
-    <%= link_to "編集", edit_public_movie_path(@movie) %>
-    <%= link_to "削除", public_movie_path(@movie), method: :delete %>
-  <% end %>
-
-<div>
-  <%= render 'favorites', movie: @movie %>
-  <p>コメント件数：<%= @movie.comments.count %></p>
-  <% @movie.comments.each do |comment| %>
-    <p><%= image_tag comment.customer.get_profile_image(50,50) %></p>
-    <%= comment.customer.name %>
-    <%= comment.created_at.strftime('%Y/%m/%d') %><%= comment.comment %>
-    <% if comment.customer == current_customer %>
-      <%= link_to "削除", public_movie_comment_path(comment.movie,comment), method: :delete %>
-    <% end %>
-  <% end %>
-</div>
-<div>
-  <%= form_with model: [@movie, @comment], url:public_movie_comments_path(@movie) do |f| %>
-    <%= f.text_area :comment, rows: '5', placeholder: "コメントをここに" %>
-    <%= f.submit "送信する" %>
-  <% end %>
-</div>
+<div class="post-detail py-5 bg-light">
+  <div class="card w-75 mx-auto mt-4 shadow-lg">
+    <video src="<%= rails_blob_path(@movie.movie) %>" type="video/mp4" controls></video>
+    <div class="card-body">
+      <div class="row">
+        <div class="col-2">
+          <p><%= image_tag @movie.customer.get_profile_image(80,80), class:"mt-3 rounded-circle"; %></p>
+        </div>
+        <p class="card-title">説明：<%= @movie.content %></p>
+        <span><i class="fas fa-user"></i> By <%= @movie.customer.name %> ｜ </span>
+          <span><i class="fa fa-calendar"></i> <%= @movie.created_at.strftime('%Y/%m/%d') %> ｜ </span>
+          <span><i class="fa fa-comment"></i> <%= link_to "#{@movie.comments.count}", public_movie_path(@movie.id), class:"text-dark" %> ｜ </span>
+            <%= render 'favorites', movie: @movie %>
+            <% if @movie.customer == current_customer %>
+            <span> ｜ </span><%= link_to "削除", public_customer_path(@movie), class:"text-dark", method: :delete %>
+           <% end %>
+      </div>
+    </div>
+    <hr>
+    <div class="comments card-text">
+      <h4 class="mt-3"><%= @movie.comments.count %>件コメント</h4>
+      <% @movie.comments.each do |comment| %>
+       <div class="media border mb-3">
+         <%= image_tag comment.customer.get_profile_image(50,50), class:"bd-placeholder-img align-self-center mx-3"; %>
+         <div class="media-body ml-4 p-3">
+           <p><%= comment.created_at.strftime('%Y/%m/%d') %></p>
+           <p><%= comment.comment %></p>
+           <% if comment.customer == current_customer %>
+             <%= link_to "削除", public_movie_comment_path(comment.movie,comment), method: :delete, class: "btn btn-danger pull-right" %>
+           <% end %>
+         </div>
+       </div>
+      <% end %> 
+    </div>
+    <hr>
+    <div class="new-comment card-text">
+      <%= form_with model: [@movie, @comment], url:public_movie_comments_path(@movie) do |f| %>
+        <div class="form-group">
+          <label for="exampleFormControlTextarea1">コメントする</label>
+          <%= f.text_area :comment, rows:'5', class: "form-control",placeholder: "コメントをここに" %>
+        </div>
+        <%= f.submit "送信する", class:"btn btn-lg btn-info mt-2 float-right" %>
+      <% end %>
+      </div>
+    </div>
+  </div>
 </div>
