--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -15,7 +15,13 @@
             <li class="nav-item">
               <%= link_to "ログアウト", destroy_admin_session_path, method: :delete, class: 'nav-link text-dark' %>
             </li>
+            <li class="nav-item">
+              <%= render 'admin/searches/search' %>
+            </li>
             <% elsif customer_signed_in? %>
+            <li class="nav-item">
+              <%= render 'public/searches/search'%>
+            </li>
             <li class="nav-item">
               <%= link_to "マイページ",public_customer_path(current_customer.id),class: 'nav-link text-dark' %>
             </li>
