--- a/app/views/public/movies/_list.html.erb
+++ b/app/views/public/movies/_list.html.erb
@@ -1,7 +1,7 @@
 <div class="card-list-containar py-5">
   <% movies.each do |movie| %>
   <div class="card w-50 mx-auto mt-4 shadow-lg">
-    <video src="<%= movie %>" type="video/mp4" controls></video>
+    <%= video_tag rails_blob_path(movie.movie) %>
     <div class="card-body">
       <div class="row">
         <div class="col-2">
