--- a/app/views/public/searches/_search.html.erb
+++ b/app/views/public/searches/_search.html.erb
@@ -2,7 +2,7 @@
   <div class="search_form">
     <%= form_with url: public_search_path, local: true, method: :get do |f| %>
       <%= f.text_field :word %>
-      <%= f.select :range, options_for_select([['Customer'], ['movie']]) %>
+      <%= f.select :range, options_for_select([['Customer'], ['content']]) %>
       <%= f.select :search, options_for_select([["部分一致","partial_match"]]) %>
       <%= f.submit "検索", class: "btn btn-primary" %>
     <% end %>
