--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -51,6 +51,9 @@
             <li class="nav-item">
               <%= link_to "管理者ログイン", new_admin_session_path, class: 'nav-link text-dark' %>
             </li>
+            <li class="nav-item">
+              <%= link_to "おすすめ動画",public_random_path,class: 'nav-link text-dark' %>
+            </li>
             <% end %>
             </ul>
           </div>
