--- a/app/views/public/movies/show.html.erb
+++ b/app/views/public/movies/show.html.erb
@@ -1,13 +1,16 @@
 <div class="post-detail py-5 bg-light">
   <div class="card w-75 mx-auto mt-4 shadow-lg">
-    <video src="<%= rails_blob_path(@movie.movie) %>" type="video/mp4" controls></video>
+    <video src="<%= rails_blob_path(@movie.movie) %>" type="video/mov" controls></video>
     <div class="card-body">
       <div class="row">
         <div class="col-2">
           <p><%= image_tag @movie.customer.get_profile_image(80,80), class:"mt-3 rounded-circle"; %></p>
         </div>
-        <p class="card-title">説明：<%= @movie.content %></p>
-        <span><i class="fas fa-user"></i> By <%= @movie.customer.name %> ｜ </span>
+        <p class="card-title">content：<%= @movie.content %></p>
+        <span><i class="fas fa-user"></i> By <%= link_to public_customer_path(@movie.customer_id) do %>
+                                              <%= @movie.customer.name %> 
+                                              <% end %>｜ 
+        </span>
         <span><i class="fa fa-calendar"></i> <%= @movie.created_at.strftime('%Y/%m/%d') %> ｜ </span>
         <span><i class="fa fa-comment"></i> <%= link_to "#{@movie.comments.count}", public_movie_path(@movie.id), class:"text-dark" %> ｜ </span>
         <span id="favorite_buttons_<%= @movie.id %>">
@@ -15,7 +18,7 @@
         </span>
 
         <% if @movie.customer == current_customer %>
-          <span> ｜ </span><%= link_to "削除", public_customer_path(@movie), class:"text-dark", method: :delete %>
+          <span> ｜ </span><%= link_to "削除", public_movie_path(@movie), class:"text-dark", method: :delete, "data-confirm" => "本当に削除しますか？"%>
       <% end %>
       </div>
     </div>
@@ -29,7 +32,7 @@
             <p><%= comment.created_at.strftime('%Y/%m/%d') %></p>
             <p><%= comment.comment %></p>
             <% if comment.customer == current_customer %>
-              <%= link_to "削除", public_movie_comment_path(comment.movie,comment), method: :delete, class: "btn btn-danger pull-right" %>
+              <%= link_to "削除", public_movie_comment_path(comment.movie,comment), method: :delete,"data-confirm" => "本当に削除しますか？", class: "btn btn-danger pull-right" %>
             <% end %>
           </div>
         </div>
