--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -5,7 +5,7 @@
         <h1>welcome to <strong>Golf_daiary</strong>  !!</span></h1>
         <p>
   				このサイトは、ゴルフ動画でつながるSNSです。<br>
-  				会員でない方も動画の閲覧はできますが、<br>
+  				会員でない方も動画の閲覧はできますが、
   				機能を使うためには会員登録が必要になります。
   			</p>
         <div class="row">
@@ -17,7 +17,7 @@
 		<div class="items">
 			<% @random.each do |movie| %>
 				<%= link_to public_random_path do %>
-					<%= video_tag rails_blob_path(movie.movie),size: '320x240' %>
+					<%= video_tag rails_blob_path(movie.movie),size: '320x475' %>
 				<% end %>
 			<% end %>
 		</div>
