--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -5,9 +5,12 @@
             <p>ゴルフ上達SNS</p>
           </div>
           <div class="col-md-8">
-            <h6 class="text-white mt-2 mb-3">Link</h6>
-            <ul class="p-0 list-unstyled">
-            </ul>
+            <h6 class="text-white mt-2 mb-3">
+              <% if customer_signed_in? %>
+               <%= link_to "退会する", public_unsubscribe_path(current_customer.id) %>
+              <% end %>
+            </h6>
+
           </div>
         </div>
       </div>
