--- a/app/views/public/searches/search.html.erb
+++ b/app/views/public/searches/search.html.erb
@@ -1,12 +1,12 @@
-<h2>Results index</h2>
+<h2 class="text-center">Results index</h2>
 
 <table class="table table-hover table-inverse">
     <!--検索対象モデルがCustomerの時 -->
     <% if @range == "Customer" %>
-      <tbody>
+      <tbody class="text-center">
         <% @customers.each do |customer| %>
           <tr>
-          <td><%= image_tag customer.get_profile_image(80,80)  %></td>
+          <td><%= image_tag customer.get_profile_image(50,50)  %></td>
           <td><%= link_to public_customer_path(customer.id) do%>
                 <%= customer.name %>
                 <% end %>
@@ -16,10 +16,10 @@
       </tbody>
     <% else %>
       
-      <tbody>
+      <tbody class="text-center">
         <% @movies.each do |movie| %>
           <tr>
-          <td><%= image_tag movie.customer.get_profile_image(80,80)  %></td>
+          <td><%= image_tag movie.customer.get_profile_image(50,50)  %></td>
           <td><%= movie.customer.name %></td>
           <td><%= link_to public_movie_path(movie.id) do%>
                 <%= movie.content%>
