--- a/app/views/public/searches/search.html.erb
+++ b/app/views/public/searches/search.html.erb
@@ -6,26 +6,27 @@
       <tbody class="text-center">
         <% @customers.each do |customer| %>
           <tr>
-          <td><%= image_tag customer.get_profile_image(50,50)  %></td>
-          <td><%= link_to public_customer_path(customer.id) do%>
+            <td><%= image_tag customer.get_profile_image(50,50)  %></td>
+            <td>
+              <%= link_to public_customer_path(customer.id) do%>
                 <%= customer.name %>
-                <% end %>
-          </td>
-        </tr>
+              <% end %>
+            </td>
+          </tr>
         <% end %>
       </tbody>
     <% else %>
-      
+
       <tbody class="text-center">
         <% @movies.each do |movie| %>
           <tr>
           <td><%= image_tag movie.customer.get_profile_image(50,50)  %></td>
           <td><%= movie.customer.name %></td>
-          <td><%= link_to public_movie_path(movie.id) do%>
-                <%= movie.content%>
-                <% end %>
+          <td>
+            <%= link_to public_movie_path(movie.id) do%>
+              <%= movie.content%>
+            <% end %>
           </td>
-          <td><%= link_to "#{movie.comments.count} コメント", public_movie_path(movie.id) %></td>
         </tr>
         <% end %>
       </tbody>
