レイアウト調整

--- a/app/views/admin/customers/index.html.erb
+++ b/app/views/admin/customers/index.html.erb
@@ -1,13 +1,5 @@
-<h1>ユーザー一覧</h1>
-<table>
-  <thead>
-    <tr>
-      <th></th>
-      <th>name</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
+<h1 class="text-center">ユーザー一覧</h1>
+<table class="table table-hover table-inverse">
   <tbody>
     <% @customers.each do |customer| %>
       <tr>
