--- a/app/views/admin/customers/show.html.erb
+++ b/app/views/admin/customers/show.html.erb
@@ -1,17 +1,32 @@
-<div>
-  <h3><%= @customer.name %></h3>
-  <%= image_tag @customer.get_profile_image(80,80) %>
-  <%= link_to "編集", edit_admin_customer_path(@customer.id) %>
-</div>
+<div class="profile-container w-75 d-flex mx-auto justify-content-around align-items-center border-bottom py-5">
+  <%= image_tag @customer.get_profile_image(80,80),class:"rounded-circle"; %>
+ <h5 class="profile-name display-4"><%= @customer.name %></h5>
+ 　　<div class="mt-auto">
+    　<%= link_to "編集", edit_admin_customer_path(@customer.id) %>
+    </div>
+ </div>
 
-<!-- ユーザーの投稿一覧 -->
-<% @movies.each do |movie| %>
-<div>
-  <%= link_to admin_movie_path(movie.id) do %>
-    <video src="<%= movie %>" type="video/mp4" controls></video>
+<div class="card-list-containar py-5">
+  <% @movies.each do |movie| %>
+  <div class="card w-50 mx-auto mt-4 shadow-lg">
+    <%=  link_to admin_movie_path(movie.id) do %>
+      <%= video_tag rails_blob_path(movie.movie), class: "w-100" %>
+    <% end %>
+    <div class="card-body">
+      <div class="row">
+        <div class="col-2">
+          <%= image_tag movie.customer.get_profile_image(50,50), class:"mt-3 rounded-circle";  %>
+        </div>
+        <div class="col-10">
+          <span><i class="fas fa-user"></i> By <%= link_to admin_customer_path(movie.customer) do %>
+              <%= movie.customer.name  %>
+              <% end %>｜
+          </span>
+          <span><i class="fa fa-comment"></i> <%= link_to "#{movie.comments.count}コメント", admin_movie_path(movie.id), class:"text-dark" %> ｜ </span>
+          <p class="card-text">content：<%= movie.content %></p>
+        </div>
+      </div>
+    </div>
+  </div>
   <% end %>
-　<p>content：<%= movie.content %></p>
-　<p><%= movie.created_at %></p>
-　<p><%= link_to "#{movie.comments.count} コメント", admin_movie_path(movie.id) %></p>
 </div>
-<% end %>
