--- a/app/views/admin/movies/show.html.erb
+++ b/app/views/admin/movies/show.html.erb
@@ -1,23 +1,36 @@
-<div>
-  <p><%= image_tag @movie.customer.get_profile_image(80,80)  %></p>
-  <p><%= link_to admin_customer_path(@customer.id) do%>
-     <%= @movie.customer.name%>
-     <% end %>
-  </p>
-  
-  <video src="<%= rails_blob_path(@movie.movie) %>" type="video/mp4" controls></video>
-  <p>content：<%= @movie.content %></p>
-  <p>投稿日：<%= @movie.created_at.strftime('%Y/%m/%d') %></p>
-   <%= link_to "一覧", admin_movies_path %>
-   <%= link_to "削除", admin_movie_path(@movie), method: :delete %>
-
-  <div>
-    <p>コメント件数：<%= @movie.comments.count %></p>
-    <% @movie.comments.each do |comment| %>
-      <p><%= image_tag comment.customer.get_profile_image(50,50) %></p>
-      <%= comment.customer.name %>
-      <%= comment.created_at.strftime('%Y/%m/%d') %><%= comment.comment %>
-        <%= link_to "削除", admin_movie_comment_path(comment.movie,comment), method: :delete %>
-    <% end %>
+<div class="post-detail py-5 bg-light">
+  <div class="card w-75 mx-auto mt-4 shadow-lg">
+    <video src="<%= rails_blob_path(@movie.movie) %>" type="video/mov" controls></video>
+    <div class="card-body">
+      <div class="row">
+        <div class="col-2">
+          <p><%= image_tag @movie.customer.get_profile_image(50,50), class:"mt-3 rounded-circle"; %></p>
+        </div>
+        <span><i class="fas fa-user"></i> By <%= link_to admin_customer_path(@movie.customer_id) do %>
+                                              <%= @movie.customer.name %> 
+                                             <% end %>｜ 
+        </span>
+        <span><i class="fa fa-calendar"></i> <%= @movie.created_at.strftime('%Y/%m/%d') %> ｜ </span>
+        <span><i class="fa fa-comment"></i> <%= link_to "#{@movie.comments.count}", admin_movie_path(@movie.id), class:"text-dark" %> ｜ </span>
+        <p class="card-title">content：<%= @movie.content %></p>
+        <span> ｜ </span><%= link_to "削除", admin_movie_path(@movie), class:"text-dark", method: :delete, "data-confirm" => "本当に削除しますか？"%>
+      </div>
+    </div>
+    <hr>
+    <div class="comments card-text">
+      <h4 class="mt-3"><%= @movie.comments.count %>件コメント</h4>
+      <% @movie.comments.each do |comment| %>
+        <div class="media border mb-3">
+          <%= image_tag comment.customer.get_profile_image(50,50), class:"bd-placeholder-img align-self-center mx-3"; %>
+          <div class="media-body ml-4 p-3">
+            <p><%= comment.created_at.strftime('%Y/%m/%d') %></p>
+            <p><%= comment.comment %></p>
+              <%= link_to "削除", admin_movie_comment_path(comment.movie,comment), method: :delete,"data-confirm" => "本当に削除しますか？", class: "btn btn-danger pull-right" %>
+          </div>
+        </div>
+      <% end %>
+    </div>
+    <hr>
   </div>
+</div>
 </div>
