--- a/app/views/public/movies/index.html.erb
+++ b/app/views/public/movies/index.html.erb
@@ -1,27 +1,3 @@
-<div class="card-list-containar py-5">
-  <% @movie.each do |movie| %>
-  <div class="card w-50 mx-auto mt-4 shadow-lg">
-    <%= video_tag rails_blob_path(movie.movie) %>
-    <div class="card-body">
-      <div class="row">
-        <div class="col-2">
-          <%= image_tag movie.customer.get_profile_image(80,80), class:"mt-3 rounded-circle";  %>
-        </div>
-        <div class="col-10">
-          <p class="card-text">説明：<%=  link_to public_movie_path(movie.id) do %>
-              <%= movie.content %>
-              <% end %>
-          </p>
-          <span><i class="fas fa-user"></i> By <%= link_to public_customer_path(movie.customer) do %>
-              <%= movie.customer.name  %>
-              <% end %>｜
-          </span>
-          <span><i class="fa fa-comment"></i> <%= link_to "#{movie.comments.count}コメント", public_movie_path(movie.id), class:"text-dark" %> ｜ </span>
-        </div>
-      </div>
-    </div>
-  </div>
-  <% end %>
-</div>
+<%= render 'public/movies/list', movies: @movies %>
 
 
