--- a/app/views/public/movies/show.html.erb
+++ b/app/views/public/movies/show.html.erb
@@ -3,23 +3,21 @@
     <video src="<%= rails_blob_path(@movie.movie) %>" type="video/mov" controls></video>
     <div class="card-body">
       <div class="row">
-        <div class="col-2">
-          <p><%= image_tag @movie.customer.get_profile_image(50,50), class:"mt-3 rounded-circle"; %></p>
-        </div>
-        <span><i class="fas fa-user"></i> By <%= link_to public_customer_path(@movie.customer_id) do %>
-                                              <%= @movie.customer.name %> 
-                                             <% end %>｜ 
+        <span><%= image_tag @movie.customer.get_profile_image(30,30), class:"rounded-circle"; %>
+            <%= link_to public_customer_path(@movie.customer_id) do %>
+              <%= @movie.customer.name %> 
+            <% end %>｜ 
         </span>
         <span><i class="fa fa-calendar"></i> <%= @movie.created_at.strftime('%Y/%m/%d') %> ｜ </span>
         <span><i class="fa fa-comment"></i> <%= link_to "#{@movie.comments.count}", public_movie_path(@movie.id), class:"text-dark" %> ｜ </span>
         <span id="favorite_buttons_<%= @movie.id %>">
         <%= render 'public/favorites/favorites', movie: @movie %>
         </span>
-        <p class="card-title">content：<%= @movie.content %></p>
+        </div>
+        <h6 class="card-title">content：<%= @movie.content %></h6>
         <% if @movie.customer == current_customer %>
           <span> ｜ </span><%= link_to "削除", public_movie_path(@movie), class:"text-dark", method: :delete, "data-confirm" => "本当に削除しますか？"%>
-      <% end %>
-      </div>
+        <% end %>
     </div>
     <hr>
     <div class="comments card-text">
