--- a/app/views/public/customers/favorites.html.erb
+++ b/app/views/public/customers/favorites.html.erb
@@ -12,7 +12,7 @@
               <% end %>｜
           </span>
           <span><i class="fa fa-comment"></i> <%= link_to "#{movie.comments.count}コメント", public_movie_path(movie.id), class:"text-dark" %> ｜ </span>
-          <p class="card-text">content：<%= movie.content %></p>
+          <p class="card-text"><%=safe_join(movie.content.split("\n"),tag(:br))%></p>
         </div>
       </div>
     </div>
