--- a/app/views/public/relationships/_follow.html.erb
+++ b/app/views/public/relationships/_follow.html.erb
@@ -1,12 +1,14 @@
 <% if customer == current_customer %>
   <p><%= link_to "プロフィール編集", edit_public_customer_path(customer.id), class:"text-dark" %></p>
-  <% end %>
-  フォロー中: <%= link_to public_customer_followings_path(customer.id) do %>
-               <%= customer.followings.count %>
-               <% end %>
-  フォロワー: <%= link_to public_customer_followers_path(customer.id) do %>
-                 <%= customer.followers.count %>
-                <% end %>
+<% end %>
+  <p>フォロー中: <%= link_to public_customer_followings_path(customer.id) do %>
+                  <%= customer.followings.count %>
+                 <% end %>
+  </p>              
+  <p>フォロワー: <%= link_to public_customer_followers_path(customer.id) do %>
+                  <%= customer.followers.count %>
+                 <% end %>
+  </p>
   <% if customer != current_customer %>              
     <% if current_customer.following?(customer) %>
       <%= link_to "フォロー外す", public_customer_relationships_path(customer.id), method: :delete %>
