--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -15,7 +15,7 @@
       </div>
 		</div>
 		<div class="items">
-			<% @rand.each do |movie| %>
+			<% @random.each do |movie| %>
 				<%= link_to public_random_path do %>
 					<%= video_tag rails_blob_path(movie.movie),size: '350x350' %>
 				<% end %>
