--- a/app/views/public/movies/index.html.erb
+++ b/app/views/public/movies/index.html.erb
@@ -1,5 +1,6 @@
 <div class="card-list-containar py-5">
   <% @movie.each do |movie| %>
+  <% if movie.customer.is_deleted == false %>
   <div class="card w-100 mx-auto mt-4 shadow-lg">
     <%=  link_to public_movie_path(movie.id) do %>
       <%= video_tag rails_blob_path(movie.movie), class: "w-100" %>
@@ -17,6 +18,7 @@
       </div>
     </div>
   </div>
+  <% end %>
   <% end %>
 </div>
 
